--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.44.1
-pandas==2.2.3
-numpy==1.24.3  # Versão mais estável
-matplotlib==3.8.0
-plotly==5.18.0
-openai==1.12.0
-python-dotenv==1.0.0
+streamlit
+pandas
+os
+requests
+FPDF
+tempfile
